testsuite/tests/typecheck/should_compile/T12734a.stderr

T12734a.hs:72:16: error:
    • No instance for (Monad (KT A '[Ty] IO))
        required by a use of ‘test_gr’
    • In the expression:
        test_gr @(KT A '[Ty] IO) @_ @'[Ty] @(Expr Net '[Ty])
      In an equation for ‘test_ghc_err’:
          test_ghc_err = test_gr @(KT A '[Ty] IO) @_ @'[Ty] @(Expr Net '[Ty])
